<resources>
    <string name="app_name">ScanNF</string>
    <string name="main_email">Digite seu e-mail</string>
    <string name="singup_email">Digite seu e-mail</string>
    <string name="main_pass">Digite sua senha</string>
    <string name="singup_pass">Digite sua senha</string>
    <string name="singup_pass_repeat">Digite novamente sua senha</string>
    <string name="singup_full_name">Digite seu nome completo</string>
    <string name="main_btnLogin">Login</string>
    <string name="main_btnCadastro">Cadastrar</string>
    <string name="singup_head">Cadastro</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="turn_off_flashlight">Ligar Flash</string>
    <string name="turn_on_flashlight">Desligar Flash</string>
    <string name="num_nota_title">Número da nota</string>
    <string name="recovery_text">Esqueci minha senha</string>
    <string name="info_nf_carro_entrega">Carro entrega</string>
    <string name="info_nf_status">Status</string>
    <string name="info_nf_motivo">Motivo</string>
    <string name="menu_sair">Sair</string>
    <string name="menu_edit_currier">Editar carro de entrega</string>
    <string name="car_select_title">Selecione o carro de entrega</string>
    <string name="car_select_btn">Salvar</string>
</resources>
