<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    tools:context=".activity.LoginActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_login"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="-50dp"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txt_name_app"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/imageView_login"
            android:layout_marginTop="-50dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="35dp" />
        <EditText
            android:id="@+id/mainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_name_app"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/main_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:layout_marginTop="30dp"

            android:textColor="@color/colorAccent"
            android:ems="10"
            android:textColorHint="@color/colorAccent"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:hint="@string/main_pass"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:layout_below="@+id/mainEmail"
            android:textColor="@color/colorAccent"
            android:ems="10"
            android:textColorHint="@color/colorAccent"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/main_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/mainPassword"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@color/colorAccent"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/main_btnLogin" />

        <Button
            android:id="@+id/main_btn_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/main_btn_login"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:background="@color/colorAccent"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/main_btnCadastro" />

        <TextView
            android:id="@+id/txt_recovery_pass"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_below="@+id/main_btn_sing_up"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/recovery_text"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="15dp" />


    </RelativeLayout>


</RelativeLayout>

