<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    tools:context=".LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/logoImagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/singup_head"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/colorAccent"
            android:textSize="50dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="34dp" />

        <EditText
            android:id="@+id/signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="80dp"
            android:backgroundTint="@color/colorAccentSecundary"
            android:drawableLeft="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/singup_full_name"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorAccentPastel" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccentSecundary"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/singup_email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccentPastel" />

        <EditText
            android:id="@+id/singup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccentSecundary"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/singup_pass"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccentPastel" />

        <EditText
            android:id="@+id/singup_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorAccentSecundary"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/singup_pass_repeat"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccentPastel" />

        <Button
            android:id="@+id/singup_btn_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="80dp"
            android:background="@color/colorAccentPastel"
            android:text="@string/main_btnCadastro"
            android:textSize="18dp"
            android:textStyle="bold" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
