<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/logoImagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGO"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="100dp"
            tools:layout_editor_absoluteX="-1dp"
            tools:layout_editor_absoluteY="34dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/mainEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/main_email"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:textColorHint="@color/colorAccentPastel"
            android:backgroundTint="@color/colorAccentSecundary"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/mainPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="30dp"
            android:hint="@string/main_pass"
            android:drawableLeft="@drawable/ic_pass"
            android:drawablePadding="10dp"
            android:textColorHint="@color/colorAccentPastel"
            android:backgroundTint="@color/colorAccentSecundary"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/main_btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/colorAccentPastel"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/main_btnLogin" />

        <Button
            android:id="@+id/main_btn_sing_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_marginHorizontal="30dp"
            android:background="@color/colorAccentPastel"
            android:textStyle="bold"
            android:textSize="18dp"
            android:text="@string/main_btnCadastro" />


    </LinearLayout>


</RelativeLayout>

